Fixed collapse border styling

--- a/src/renderer/style/element-ui/collapse.scss
+++ b/src/renderer/style/element-ui/collapse.scss
@@ -13,10 +13,13 @@ $--collapse-border-color: rgba(255, 255, 255, .4);
 @include b(collapse-item) {
   @include e(header) {
     padding: 20px;
-    transition: border-bottom-color .3s, background-color 150ms linear;
+    transition: border-bottom-color 1ms linear 330ms, background-color 150ms linear;
     font-size: 15px;
     &:hover {
       background-color: $--collapse-header-hover-fill;
+    }
+    @include when(active) {
+      transition: border-bottom-color 1ms linear, background-color 150ms linear;
     }
   }
 
